# yat

./: .gitignore  README.md  pyproject.toml
src/yat/: manage.py
src/yat/common/: stubs.py
src/yat/common/static/css/: base.css
src/yat/common/static/js/: base.js
src/yat/common/templates/yat/: base.html
src/yat/todo/: admin.py  api.py  exceptions.py  models.py  schema.py  urls.py  views.py
src/yat/todo/migrations/: 0001_initial.py  0002_item_done.py
src/yat/todo/templates/todo/: index.html
src/yat/todo/templates/todo/partial/: items.html
src/yat/yat/: api.py  asgi.py  settings.py  urls.py  wsgi.py
